added method for add new user to databse

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,3 +16,7 @@ spring.h2.console.enabled=true
 # Data initialization
 spring.sql.init.mode=always
 spring.sql.init.data-locations=classpath:database/data.sql
+
+# Date/Time formatting
+spring.jackson.date-format=yyyy-MM-dd HH:mm:ss
+spring.jpa.properties.hibernate.jdbc.time_zone=UTC
